--- a/books.html
+++ b/books.html
@@ -6,25 +6,46 @@
 </head>
 <body>
   <header>
-    <h1>📖 Library Book Reviews</h1>
+    <h1>📚 Book List & Reviews</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="books.html">Book List</a>
-      <a href="add-book.html">Add/Edit Book</a>
+      <a href="add-book.html">Add Book</a>
     </nav>
   </header>
 
-  <main>
-    <section class="book">
-      <img src="images/sample-book.jpg" alt="Book Cover">
-      <div>
-        <h2>Atomic Habits</h2>
-        <p><strong>Author:</strong> James Clear</p>
-        <p><strong>Review:</strong> A great book on building positive habits and breaking bad ones. Perfect for students!</p>
-      </div>
-    </section>
+  <main id="bookList">
+    <p>Loading books...</p>
   </main>
 
   <footer>&copy; 2025 College Library</footer>
+
+  <script>
+    async function fetchBooks() {
+      const response = await fetch('https://sheetdb.io/api/v1/wiz4ptw68j77c');
+      const books = await response.json();
+      const bookList = document.getElementById('bookList');
+
+      bookList.innerHTML = '';
+
+      books.forEach(book => {
+        const bookHTML = `
+          <section class="book">
+            <img src="${book.image || 'images/sample-book.jpg'}" alt="Book Cover">
+            <div>
+              <h2>${book.title}</h2>
+              <p><strong>Author:</strong> ${book.author}</p>
+              <p><strong>Genre:</strong> ${book.genre || 'N/A'}</p>
+              <p><strong>Review:</strong> ${book.review || 'No review yet.'}</p>
+            </div>
+          </section>
+        `;
+        bookList.innerHTML += bookHTML;
+      });
+    }
+
+    fetchBooks();
+  </script>
 </body>
 </html>
+
