--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>College Library - Home</title>
+  <title>College Book Review</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>📚 College Book Review Portal</h1>
+    <h1>📚 College Library Book Reviews</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="books.html">Book List</a>
-      <a href="add-book.html">Add/Edit Book</a>
+      <a href="submit-review.html">Submit Review</a>
     </nav>
   </header>
 
   <main>
-    <section>
-      <h2>Welcome!</h2>
-      <p>This platform helps students and staff explore book reviews and contribute to the college library collection.</p>
-    </section>
+    <h2>Welcome to the College Book Review Site</h2>
+    <p>Discover books, read reviews, and share your thoughts!</p>
   </main>
 
   <footer>&copy; 2025 College Library</footer>
