--- a/books.html
+++ b/books.html
@@ -1,51 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Library Books</title>
+  <title>Book List</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>📚 Book List & Reviews</h1>
+    <h1>📖 All Books</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="books.html">Book List</a>
-      <a href="add-book.html">Add Book</a>
+      <a href="submit-review.html">Submit Review</a>
     </nav>
   </header>
 
-  <main id="bookList">
-    <p>Loading books...</p>
+  <main>
+    <div id="bookList">Loading books...</div>
   </main>
 
   <footer>&copy; 2025 College Library</footer>
 
   <script>
-    async function fetchBooks() {
-      const response = await fetch('https://sheetdb.io/api/v1/wiz4ptw68j77c');
-      const books = await response.json();
-      const bookList = document.getElementById('bookList');
+    fetch('https://sheetdb.io/api/v1/wiz4ptw68j77c')
+      .then(res => res.json())
+      .then(data => {
+        const container = document.getElementById('bookList');
+        if (!data.length) {
+          container.textContent = "No books found.";
+          return;
+        }
 
-      bookList.innerHTML = '';
-
-      books.forEach(book => {
-        const bookHTML = `
-          <section class="book">
-            <img src="${book.image || 'images/sample-book.jpg'}" alt="Book Cover">
-            <div>
-              <h2>${book.title}</h2>
-              <p><strong>Author:</strong> ${book.author}</p>
-              <p><strong>Genre:</strong> ${book.genre || 'N/A'}</p>
-              <p><strong>Review:</strong> ${book.review || 'No review yet.'}</p>
-            </div>
-          </section>
-        `;
-        bookList.innerHTML += bookHTML;
+        container.innerHTML = data.map(book => \`
+          <div class="book-card">
+            <h3>\${book.title}</h3>
+            <p><strong>Author:</strong> \${book.author}</p>
+            <p><strong>Genre:</strong> \${book.genre}</p>
+            <p><strong>Description:</strong> \${book.description}</p>
+          </div>
+        \`).join('');
       });
-    }
-
-    fetchBooks();
   </script>
 </body>
 </html>
-
